# bin2coe

./: .gitignore  .travis.yml  DEVELOPMENT.md  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml
src/bin2coe/: cli.py  convert.py
test/bin2coe/: test_convert.py
tests/: test_convert.py
