[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bin2coe"
authors = [
  { name = "Anish Athalye", email = "me@anishathalye.com" },
]
description = "A tool to convert binary files to COE files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
keywords = ["xilinx", "coe", "bram"]
dynamic = ["version"]

[project.scripts]
bin2coe = "bin2coe.cli:main"

[project.urls]
homepage = "https://github.com/anishathalye/bin2coe"
repository = "https://github.com/anishathalye/bin2coe.git"
issues = "https://github.com/anishathalye/bin2coe/issues"

[tool.hatch.version]
path = "src/bin2coe/__init__.py"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "pypy3.9"]

# the default configuration for the hatch-test environment
# (https://hatch.pypa.io/latest/config/internal/testing/#dependencies) uses a
# version of coverage[toml] that is incompatible with Python 3.7, so we override
# the test dependencies for Python 3.7 here
[tool.hatch.envs.hatch-test.overrides]
name."^py3\\.7$".set-dependencies = [
  "coverage-enable-subprocess",
  "coverage[toml]",
  "pytest",
  "pytest-mock",
  "pytest-randomly",
  "pytest-rerunfailures",
  "pytest-xdist[psutil]",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --strict --install-types --non-interactive {args:src tests}"

[tool.hatch.envs.coverage]
detached = true
dependencies = [
  "coverage",
]

[tool.hatch.envs.coverage.scripts]
html = "coverage html"
xml = "coverage xml"

[tool.ruff.lint]
ignore = [
  "FA100",
]
